--- a/index.html
+++ b/index.html
@@ -3,29 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Something I need to tell</title>
+    <title>I want you to tell</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <h1>Dear Smitha,</h1>
-        <div class="content">
-            <p>You are the most beautiful person I've ever met. Your gorgeous eyes and divine smile light up my world.</p>
-            <p>To be honest i am really scared of asking you, but coding is my love, so i thought to do this </p>
+        <div class="content"> 
+            <p>I hope this doesn't come out of the blue, but I've been wanting to tell you something for a while now. And anyways you know this from the beginning. </p>
+            <p>You are the most beautiful person I've ever met. Your gorgeous eyes and that smile light up my world.</p>
+            <p>To be honest i am really scared of asking you, but coding is my love, so i thought to do this instead😅😅</p>
+           
             <p>No matter what happens i will always LOVE YOU</p>
-            <p>I will wait for you, I have been waiting for you, i can do that till the end of TIME</p>
-            <p>I'll ALWAYS BE HERE WAITING FOR YOU</p>
+            <p> You mean a lot to me, and I felt it was important to be honest with you about how I feel.</p>
+          
             <p>So, Smitha</p>
             <p style="font-size: 32px;">Will you be my partner for life?</p>
             <form class="proposal-form">
                 <button id="loveButton">YES...!❤️</button>
-                <button id="dontKnowButton">NO😢</button>
+                <button id="dontKnowButton">NO😡</button>
             </form>
+            <p>Want to see the most beautiful girl I ever saw</p>
             <div class="photo-paragraph">
-                <button id="photoButton" style="font-size: 15px;">The most beautiful girl click here</button>
+                <button id="photoButton" style="font-size: 15px;">click here</button>
             </div>
             <div id="photoPopup">
-                <img src="wallpaperflare.com_wallpaper (1).jpg" alt="Smitha's Photo">
+                <img src="sweet.jpg" alt="Smitha's Photo">
                 <span class="close" id="closeButton">&times;</span>
             </div>
         </div>
